CHANGES file for Templates plugin.

Version 3.0.0 (???)
=============================
ENHANCEMENTS:
Added support for template labeling via "#template=" statement.
Added Calvin's dockable window for template selection.

Version 2.9.9 (30-APR-2002)
=============================
Pre-release for testing integration of Calvin Yu's Velocity classes.
Directory hierarchy changed to separate Velocity classes from Templates plugin classes.
Changed to ant for build management.

Version 2.0.2 (08-MAR-2002)
=============================
BUG FIX:
- fixed problem with file paths on Windows, where BeanShell threw an exception on encountering a backslash when processing a TemplateAction object (as reported by Arno Verhoeven) 

Version 2.0.1 (25-FEB-2002)
=============================
BUG FIX:
- fixed problem with templates directory not being created (as reported by Will Sargent) 

Version 2.0.0 (21-FEB-2002)
=============================
CHANGES:
- updated Templates to be compliant with jEdit 4.0 actions API
ENHANCEMENTS:
- all template menu items are now created using BeanShellAction objects, 
which allows menu selections to be used in recorded macros 

Version 1.1.0 (16-JULY-2001)
=============================
BUG FIX:
- updated TemplatesPlugin to use createMenuItems(Vector menuItems), rather 
than the deprecated createMenuItems(View view, Vector menus, Vector menuItems).
ENHANCEMENTS:
- added "Edit Template" function to Templates menu
- added "Save Template" function to Templates menu

Version 1.0.2 (04-DEC-2000)
=============================
BUG FIX:
- the signature of org.gjt.sp.jedit.EditAction (2.7pre2) was changed such that 
it no longer implements ActionListener. TemplatesAction was modified to 
implement ActionListener directly, instead of relying on the EditAction 
superclass. Tested against jEdit 2.7pre2, as well as 2.6final.

Version 1.0.1 (20-APR-2000)
=============================
CHANGES:
- updated TemplatesOptionPane for compliance with new OptionPane interface 