@@ -61,9 +61,13 @@
 
 	<property name="jar.name" value="${ant.project.name}.jar"/>
 	<property name="docs-proc.target" value="xsltproc"/>
-	<property name="docbook.xsl" value="/usr/share/xsl/docbook-xsl-1.44"/>
+	<!--
+	<property name="docbook.xsl" value="/usr/share/sgml/docbook/xsl-stylesheets"/>
+	-->
 
+	<!--
 	<property name="build-docs.not-required" value="true"/>
+	-->
 
 	<property name="jedit.install.dir" value="/share/jedit/4.0"/>
 	<property name="src.dir" value="."/>
@@ -73,7 +77,8 @@
 	-->
 	<property name="install.dir" value=".."/>
 	<property name="build.dir" value="build"/>
-
+	<property name="docs.dir" value="docs"/>
+  <property name="helpfile.name" value="Templates.html"/>
 
 	<property name="velocity.jar" value="${src.lib}/velocity-core-1.3-rc1.jar"/>
 	<!-- }}} -->
@@ -123,7 +128,7 @@
 		<property name="users-guide.xsl" value="default-users-guide.xsl"/>
 
 		<uptodate property="build-docs.not-required"
-				targetfile="${build.dir}/users-guide.html">
+				targetfile="${build.dir}/${helpfile.name}">
 			<srcfiles dir="." includes="users-guide.xml"/>
 		</uptodate>
 	</target>
@@ -176,15 +181,25 @@
 	<target name="docs" depends="init" unless="build-docs.not-required"
 			description="Builds users guide documentation">
 		<antcall target="docs-${docs-proc.target}"/>
+		<move todir="${build.dir}/docs">
+		  <fileset dir="${docs.dir}">
+			  <include name="**/*.html"/>
+			</fileset>
+		</move>
+		<copy todir="${build.dir}/docs/images">
+		  <fileset dir="${docs.dir}/images"/>
+		</copy>
 	</target>
 	<!-- }}} -->
 
 	<!-- {{{ 'docs-xsltproc' target -->
 	<target name="docs-xsltproc"
 			description="Generate docs with xsltproc tool from www.xmlsoft.org">
-		<exec executable="xsltproc" output="${build.dir}/users-guide.html">
+		<!-- <exec executable="xsltproc" output="${build.dir}/${helpfile.name}"> -->
+		<exec executable="xsltproc" dir="${docs.dir}">
 			<arg value="--catalogs"/>
-			<arg value="${users-guide.xsl}"/>
+			<arg value="--nonet"/>
+			<arg value="users-guide.xsl"/>
 			<arg value="users-guide.xml"/>
 		</exec>
 	</target>
@@ -194,7 +209,7 @@
 	<target name="docs-xalan"
 			description="Generate docs with Xalan tool from xml.apache.org">
 		<style style="${users-guide.xsl}" in="users-guide.xml"
-				out="${build.dir}/users-guide.html"/>
+				out="${build.dir}/${helpfile.name}"/>
 	</target>
 	<!-- }}} -->
 
